tests/ui/diagnostic_namespace/opaque/highlight_maccall.-Zmacro-backtrace.stderr
error: oh no
  --> $DIR/highlight_maccall.rs:9:9
   |
LL | / macro_rules! my_error {
LL | |     () => {{
LL | |         compile_error!("oh no")
   | |         ^^^^^^^^^^^^^^^^^^^^^^^
...  |
LL | | }
   | |_- in this expansion of `my_error!`
...
LL |       my_error!();
   |       ----------- in this macro invocation

error: aborting due to 1 previous error

